[gd_scene load_steps=2 format=3 uid="uid://dnvf3rmq6ihk6"]

[ext_resource type="Script" path="res://webcam_client_udp.gd" id="1"]

[node name="WebcamClient" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.15, 0.15, 0.15, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 50.0
text = "Webcam Streaming Client (UDP)"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 60.0
offset_right = 600.0
offset_bottom = 85.0
text = "Status: Disconnected"

[node name="ServerInfo" type="Label" parent="."]
modulate = Color(0.8, 0.8, 0.8, 1)
layout_mode = 0
offset_left = 700.0
offset_top = 60.0
offset_right = 950.0
offset_bottom = 85.0
text = "Server: 127.0.0.1:8888 (UDP)"

[node name="VideoContainer" type="Panel" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -200.0
offset_right = 320.0
offset_bottom = 200.0

[node name="TextureRect" type="TextureRect" parent="VideoContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="NoSignalLabel" type="Label" parent="VideoContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "No Signal
(UDP Mode)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ControlPanel" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -71.0
offset_right = 161.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0

[node name="ConnectButton" type="Button" parent="ControlPanel"]
layout_mode = 2
size_flags_horizontal = 3
text = "Connect to Server"

[node name="QuitButton" type="Button" parent="ControlPanel"]
layout_mode = 2
size_flags_horizontal = 3
text = "Quit"

[node name="ShadeOptionButton" type="OptionButton" parent="ControlPanel"]
layout_mode = 2

[node name="IntensityLabel" type="Label" parent="ControlPanel"]
layout_mode = 2
text = "Intensitas"

[node name="IntensitySlider" type="HSlider" parent="ControlPanel"]
layout_mode = 2
size_flags_vertical = 4

[node name="InfoPanel" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 100.0
offset_right = 250.0
offset_bottom = 200.0

[node name="FPSLabel" type="Label" parent="InfoPanel"]
layout_mode = 2
text = "FPS: --"

[node name="ResolutionLabel" type="Label" parent="InfoPanel"]
layout_mode = 2
text = "Resolution: --"

[node name="DataRateLabel" type="Label" parent="InfoPanel"]
layout_mode = 2
text = "Rate: -- KB/s"

[node name="PerformanceInfo" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 700.0
offset_top = 100.0
offset_right = 900.0
offset_bottom = 180.0

[node name="ProtocolLabel" type="Label" parent="PerformanceInfo"]
modulate = Color(0.7, 1, 0.7, 1)
layout_mode = 2
text = "Protocol: UDP"

[node name="AdvantageLabel1" type="Label" parent="PerformanceInfo"]
modulate = Color(0.8, 0.8, 0.8, 1)
layout_mode = 2
text = "✓ Lower Latency"

[node name="AdvantageLabel2" type="Label" parent="PerformanceInfo"]
modulate = Color(0.8, 0.8, 0.8, 1)
layout_mode = 2
text = "✓ No Handshake"

[node name="AdvantageLabel3" type="Label" parent="PerformanceInfo"]
modulate = Color(0.8, 0.8, 0.8, 1)
layout_mode = 2
text = "✓ Real-time Streaming"
